--- a/styles/style.css
+++ b/styles/style.css
@@ -4,6 +4,7 @@
     --accent-color: #F56416;
     --neutral-color-1: #8A8E91;
     --neutral-color-2: #F7F7FF;
+    --background-color: Black;
 
     --heading-font: 'Reenie Beanie', cursive;
     --paragraph-font: 'Advent Pro', sans-serif;
@@ -12,4 +13,5 @@
 body {
     font-family: var(--paragraph-font);
     color: var(--neutral-color-2);
+    background-color: var(--background-color);
 }
