add header and some styling

--- a/public/partials/header.html
+++ b/public/partials/header.html
@@ -1,2 +1,5 @@
-<h1></h1>
-<picture></picture>
+<h1>AniMate</h1>
+<picture>
+    <source srcset="images/home-page.webp" media="(min-width: 40rem)">
+    <img src="images/home-page-small.webp" alt="Pencil drawn picture of a women in the style of anime.">
+</picture>
