--- a/public/partials/nav.html
+++ b/public/partials/nav.html
@@ -1,5 +1,5 @@
 <ul>
-    <li></li>
-    <li></li>
-    <li></li>
+    <li><a href="index.html">Home</a></li>
+    <li><a href="search.html">Search</a></li>
+    <li><a href="lists.html">My Lists</a></li>
 </ul>
