--- a/styles/style.css
+++ b/styles/style.css
@@ -10,7 +10,7 @@
     --paragraph-font: 'Advent Pro', sans-serif;
 }
 
-main {
+main, nav, footer, header {
     font-family: var(--paragraph-font);
     color: var(--neutral-color-2);
     background-color: var(--background-color);
@@ -39,4 +39,13 @@ picture img {
     width: 100%;
     height: auto;
     z-index: 1;
+}
+
+a  {
+    text-decoration: none;
+    color: var(--neutral-color-2);
+}
+
+ul {
+    list-style-type: none;
 }
