start adding styling

--- a/public/partials/header.html
+++ b/public/partials/header.html
@@ -3,3 +3,4 @@
     <source srcset="images/home-page.webp" media="(min-width: 40rem)">
     <img src="images/home-page-small.webp" alt="Pencil drawn picture of a women in the style of anime.">
 </picture>
+<button id="menu" title="menu" class="close"></button>
