--- a/public/partials/nav.html
+++ b/public/partials/nav.html
@@ -2,4 +2,5 @@
     <li><a href="index.html">Home</a></li>
     <li><a href="search.html">Search</a></li>
     <li><a href="lists.html">My Lists</a></li>
+    <li><a href="references.html">References</a></li>
 </ul>
