--- a/styles/style.css
+++ b/styles/style.css
@@ -80,20 +80,18 @@ nav ul {
     flex-direction: column;
     height: 100%;
     margin: 0;
-    /* justify-content: center; */
+    justify-content: flex-start;
 }
 
 nav ul li {
     font-size: 2rem;
     background-color: var(--primary-color);
-    padding: 2rem 1rem;
-    /* margin: 0 .5rem; */
-    margin: 0;
+    padding: 3rem 1rem;
     text-align: center;    
 }
 nav ul li:nth-child(1) {
     clip-path: polygon(0 0, 100% 0%, 100% 80%, 0 100%);
-    padding-top: 3rem;
+    margin-top: .5rem;;
 }
 
 nav ul li:nth-child(2) {
@@ -102,6 +100,7 @@ nav ul li:nth-child(2) {
 
 nav ul li:nth-child(3) {
     clip-path: polygon(0 20%, 100% 0%, 100% 100%, 0 100%);
+    margin-bottom: 1.5rem;
 }
 
 
