--- a/public/partials/header.html
+++ b/public/partials/header.html
@@ -1,6 +1,7 @@
 <h1>AniMate</h1>
 <picture>
-    <source srcset="images/home-page.webp" media="(min-width: 40rem)">
+    <source srcset="images/home-page-large.webp" media="(min-width: 80rem)">
+    <source srcset="images/home-page.webp" media="(min-width: 50rem)">
     <img src="images/home-page-small.webp" alt="Pencil drawn picture of a women in the style of anime.">
 </picture>
 <button id="menu" title="menu" class="close"></button>
