--- a/styles/style.css
+++ b/styles/style.css
@@ -31,8 +31,7 @@ h1 {
     grid-row-start: 1;
 }
 
-header,
-body {
+header, body, main {
     display: grid;
 }
 
@@ -146,6 +145,35 @@ footer {
     font-size: 1.5rem;
     grid-column-start: 1;
 }
+
+#searchBox {
+    font-size: 1.5rem;
+    display: grid;
+    grid-template-columns: 2fr 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+    padding: 1rem;
+    grid-gap: .5rem;
+}
+
+#searchInput {
+    font-family: var(--paragraph-font);
+    grid-row: 1 / span 2;
+    padding: .8rem;
+    font-size: 1.5rem;
+}
+
+#genreSearch {
+    grid-row-start: 2;
+}
+
+#searchButton {
+    grid-column-start: 3;
+    grid-row: 1 / span 2;
+    font-size: 3rem;
+    font-family: var(--heading-font);
+}
+
+
 
 
 @media screen and (min-width: 50rem) {
