fix header grid

--- a/public/partials/header.html
+++ b/public/partials/header.html
@@ -5,3 +5,4 @@
     <img src="images/home-page-small.webp" alt="Pencil drawn picture of a women in the style of anime.">
 </picture>
 <button id="menu" title="menu" class="close"></button>
+<nav id="nav" class="close"></nav>
