--- a/styles/style.css
+++ b/styles/style.css
@@ -31,9 +31,13 @@ h1 {
     grid-row-start: 1;
 }
 
-header,
+/* header,
 body,
 main {
+    display: grid;
+} */
+
+header {
     display: grid;
 }
 
@@ -71,10 +75,6 @@ nav ul li {
 
 #nav.close {
     display: none;
-}
-
-nav.open {
-    display: block;
 }
 
 nav.open ul li {
@@ -136,7 +136,6 @@ nav ul li:hover {
 
 #menu.open::before {
     content: "\2718";
-    grid-column-start: 1;
 }
 
 #menu:hover {
@@ -203,9 +202,15 @@ footer {
 
 @media screen and (min-width: 50rem) {
 
+    header.nav-open {
+        grid-template-columns: 1fr auto;
+    }
+
+
     nav.open {
         grid-column-start: 2;
         transition: all 0.5s ease-out;
+        animation: slideInFromRight 0.5s ease-out forwards;
     }
 
     nav ul li {
@@ -235,10 +240,6 @@ footer {
         padding: .5rem 3vw;
         right: 1rem;
         transform: rotate(-5deg);
-    }
-
-    nav.open {
-        animation: slideInFromRight 0.5s ease-out forwards;
     }
 
     nav ul li:nth-child(1) {
