--- a/styles/style.css
+++ b/styles/style.css
@@ -31,13 +31,12 @@ h1 {
     grid-row-start: 1;
 }
 
-/* header,
-body,
-main {
-    display: grid;
-} */
+h2 {
+    font-size: 2rem;
+}
 
-header {
+header,
+#home-page {
     display: grid;
 }
 
@@ -200,6 +199,63 @@ footer {
     font-size: 3rem;
 }
 
+#intro p,
+#quote p {
+    font-size: 1.5rem;
+}
+
+#intro,
+#randomAnime,
+#quote {
+    border: 3px solid var(--background-color);
+    padding: 1rem;
+    width: 90%;
+}
+
+#home-page {
+    grid-gap: 10px;
+    justify-items: center;
+    margin: 2rem 0;
+}
+
+#home-page .fa-solid.fa-spinner {
+    font-size: 4rem;
+    color: var(--primary-color);
+    animation: spin 1.5s linear infinite;
+}
+
+#home-page h2,
+.randomAnimeCard h3 {
+    margin-top: 0;
+}
+
+.quoteText {
+    font-style: italic;
+}
+
+.randomAnimeCard {
+    border: 2px solid var(--background-color);
+    padding: 1rem;
+    margin: 1rem;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    gap: 1rem;
+    box-shadow: 0 0 5px var(--accent-color);
+}
+
+.randomAnimeCard img {
+    max-width: 150px;
+    height: auto;
+    margin-left: auto;
+}
+
+.randomAnimeCard h3 {
+    color: var(--primary-color);
+    font-size: 2rem;
+    align-self: flex-start;
+}
+
 @media screen and (min-width: 50rem) {
 
     header.nav-open {
@@ -268,7 +324,8 @@ footer {
         grid-template-rows: 1fr 1fr;
     }
 
-    #titleSearch, #genreSearch {
+    #titleSearch,
+    #genreSearch {
         grid-column-start: 2;
     }
 
@@ -286,6 +343,15 @@ footer {
         grid-row: 1 / span 2;
         margin-top: 0;
         width: auto;
+    }
+
+    #home-page {
+        grid-template-columns: 1fr 1fr;
+    }
+
+    #quote {
+        grid-column: 1 / span 2;
+        width: 95%;
     }
 }
 
@@ -338,5 +404,15 @@ footer {
     100% {
         transform: translateY(0);
         opacity: 1;
+    }
+}
+
+@keyframes spin {
+    0% {
+        transform: rotate(0deg);
+    }
+
+    100% {
+        transform: rotate(360deg);
     }
 }
