style search page and fix home page styling

--- a/styles/style.css
+++ b/styles/style.css
@@ -37,13 +37,14 @@ h2 {
 
 header,
 #home-page {
-    display: grid;
+    display: grid;    
 }
 
 picture img {
     width: 100%;
     height: auto;
     z-index: 1;
+    box-shadow: 0 0 2px var(--secondary-color);
 }
 
 a {
@@ -191,12 +192,77 @@ footer {
 
 #results {
     min-height: 200px;
+    display: grid;
 }
 
 #emptyResults {
     text-align: center;
     font-family: var(--heading-font);
     font-size: 3rem;
+}
+
+.animeCard {
+    border: 2px solid var(--background-color);
+    padding: 1rem;
+    margin: 1rem;
+    display: grid;
+    grid-template-columns: 2fr 40px 40px 1fr;
+    grid-template-rows: auto auto auto;
+    box-shadow: 0 0 2px var(--secondary-color);
+
+    h3 {
+        grid-column-start: 1;
+        grid-row-start: 1;
+        margin: 0;
+        color: var(--primary-color);
+        font-size: 1.5rem;
+    }
+        img {
+    
+        width: auto;
+        height: auto;
+        grid-column-start: 4;
+        grid-row: 1 / span 2;
+        align-self: center;
+        justify-self: center;
+        box-shadow: 0 0 8px var(--secondary-color);
+    }
+    
+    button {
+        grid-row-start: 1;
+        border: none;
+        background: none;
+        font-size: 1.5rem;
+        align-self: start;
+    }
+
+    button.watched {
+        grid-column-start: 2;
+    }
+
+    button.watchLater {
+        grid-column-start: 3;
+    }
+
+    button:hover {
+        color: var(--accent-color);
+        cursor: pointer;
+    }
+
+    .genres {
+        grid-column-start: 4;
+        grid-row-start: 3;
+        font-style: italic;
+        justify-self: center;
+        font-size: 1rem;
+    }
+
+    .synopsis {
+        grid-column: 1 / span 2;
+        grid-row: 2 / span 2;
+        font-size: 1.2rem;
+    }
+
 }
 
 #intro p,
@@ -210,6 +276,7 @@ footer {
     border: 3px solid var(--background-color);
     padding: 1rem;
     width: 90%;
+    box-shadow: 0 0 2px var(--secondary-color);
 }
 
 #home-page {
@@ -218,7 +285,7 @@ footer {
     margin: 2rem 0;
 }
 
-#home-page .fa-solid.fa-spinner {
+.fa-solid.fa-spinner {
     font-size: 4rem;
     color: var(--primary-color);
     animation: spin 1.5s linear infinite;
@@ -241,13 +308,16 @@ footer {
     align-items: center;
     justify-content: space-between;
     gap: 1rem;
-    box-shadow: 0 0 5px var(--accent-color);
+    box-shadow: 0 0 2px var(--secondary-color);
+    animation: fadeIn 2s linear forwards;
+    min-height: 250px;
 }
 
 .randomAnimeCard img {
     max-width: 150px;
     height: auto;
     margin-left: auto;
+    box-shadow: 0 0 8px var(--secondary-color);
 }
 
 .randomAnimeCard h3 {
@@ -374,12 +444,21 @@ footer {
         padding: .5rem 1vw;
         transition: all 0.5s ease-out;
     }
+
+    #searchBox {
+        grid-template-columns: 700px 190px 175px auto;
+        transition: all 0.5s ease-out;
+    }
 }
 
 @media screen and (min-width: 1700px) {
     nav ul li {
         padding: 3rem 1rem;
         transition: all 0.5s ease-out;
+    }
+
+    #results {
+        grid-template-columns: repeat(2, 1fr);
     }
 }
 
@@ -414,5 +493,15 @@ footer {
 
     100% {
         transform: rotate(360deg);
+    }
+}
+
+@keyframes fadeIn {
+    0% {
+        opacity: 0;
+    }
+
+    100% {
+        opacity: 1;
     }
 }
