first performance improvements

--- a/public/partials/header.html
+++ b/public/partials/header.html
@@ -2,7 +2,7 @@
 <picture>
     <source srcset="images/home-page-large.webp" media="(min-width: 80rem)">
     <source srcset="images/home-page.webp" media="(min-width: 50rem)">
-    <img src="images/home-page-small.webp" alt="Pencil drawn picture of a women in the style of anime.">
+    <img src="images/home-page-small.webp" alt="Pencil drawn picture of a women in the style of anime." width="800" height="1200">
 </picture>
 <button id="menu" title="menu" class="close"></button>
 <nav id="nav" class="close"></nav>
